test/files/neg/macro-reify-splice-splice.check
Macros_1.scala:8: error: the splice cannot be resolved statically, which means there is a cross-stage evaluation involved.
cross-stage evaluations need to be invoked explicitly, so we're showing you this error.
if you're sure this is not an oversight, add scala-compiler.jar to the classpath,
import `scala.tools.reflect.Eval` and call `<your expr>.eval` instead.
      { c.universe.reify(c.universe.reify("hello world")) }.splice.splice
                                                                   ^
one error found
